--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,46 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+body {
+  background-color: rgb(5, 5, 56);
+}
+.container {
+  margin-top: 50px;
+}
+
+.card {
+  background-color: white;
+  display: flex;
+  margin-right: auto;
+  margin-left: auto;
+  height: 460px;
+}
+.headCard {
+  display: flex;
+  justify-content: left;
+  font-size: 100px;
+}
+.bodyCard {
+  display: flex;
+  justify-content: center;
+  font-size: 100px;
+}
+.footCard {
+  display: flex;
+  justify-content: right;
+  font-size: 100px;
+}
+.red {
+  color: red;
+}
+#button,
+#button2,
+#button3 {
+  width: 100px;
+  height: 50px;
+  background-color: rgb(206, 203, 203);
+}
+
+.img {
+  background-image: url(./assets/img/carta.jpg);
+  background-size: 320px 460px;
+}
