--- a/src/style.css
+++ b/src/style.css
@@ -34,10 +34,16 @@ body {
 }
 #button,
 #button2,
-#button3 {
-  width: 100px;
+#button3,
+#button4,
+#button5 {
+  width: 150px;
   height: 50px;
   background-color: rgb(206, 203, 203);
+}
+input {
+  width: 150px;
+  height: 50px;
 }
 
 .img {
