--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,12 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 
 body {
-  background-color: rgb(5, 5, 56);
+  background-image: url(https://media.istockphoto.com/photos/texture-felt-picture-id157622968?k=20&m=157622968&s=612x612&w=0&h=Ha2OoIgq9G5kRVwmmioCVjGh8YvlDboS0kJ4XwXFvJQ=);
+  object-fit: inherit;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
+
 .container {
   margin-top: 50px;
 }
@@ -13,24 +17,40 @@ body {
   margin-right: auto;
   margin-left: auto;
   height: 460px;
+  border-radius: 15px;
 }
+.img {
+  background-image: url(./assets/img/carta.jpg);
+  background-size: 320px 460px;
+  border-radius: 15px;
+}
+
 .headCard {
   display: flex;
   justify-content: left;
   font-size: 100px;
+  width: 100%;
+  height: 100%;
 }
 .bodyCard {
   display: flex;
   justify-content: center;
   font-size: 100px;
+  width: 100%;
+  height: 100%;
 }
 .footCard {
   display: flex;
   justify-content: right;
   font-size: 100px;
+  width: 100%;
+  height: 100%;
 }
-.red {
-  color: red;
+.button {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  margin-top: 10px;
 }
 #button,
 #button2,
@@ -39,14 +59,12 @@ body {
 #button5 {
   width: 150px;
   height: 50px;
-  background-color: rgb(206, 203, 203);
+  background-color: rgb(29, 24, 24);
+  margin-top: 12px;
+  color: grey;
 }
 input {
   width: 150px;
   height: 50px;
-}
-
-.img {
-  background-image: url(./assets/img/carta.jpg);
-  background-size: 320px 460px;
+  margin-top: 12px;
 }
